--- a/index.html
+++ b/index.html
@@ -687,6 +687,11 @@
         const toolsData = {
             image: [
                 { name: "Image Converter", description: "Convert images between different formats with ease", icon: "fas fa-exchange-alt" },
+                </div>
+                <h3>Image Convertor</h3>
+                <p>Convert between JPG, PNG, GIF, WEBP and more formats</p>
+                 <a href=''image-convertor.html'' class=''tool-button''>Use Tool</a>
+            </div>
                 { name: "Image Compressor", description: "Reduce image file size without losing quality", icon: "fas fa-compress-alt" },
                 { name: "Image Resizer", description: "Change dimensions of your images easily", icon: "fas fa-expand-alt" },
                 { name: "Image Cropper", description: "Crop images to your desired dimensions", icon: "fas fa-crop-alt" },
