--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
                         <div class="tool-icon-small"><i class="fas fa-exchange-alt"></i></div>
                         <h3 class="tool-name">Image Converter</h3>
                         <p class="tool-description">Convert images between different formats like JPG, PNG, and more.</p>
-                        <a href="#" class="btn-tool">Use Tool</a>
+                        <a href="image-convertor.html" class="btn-tool">Use Tool</a>
                     </div>
                     
                     <div class="tool-card">
