--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
                         <div class="tool-icon-small"><i class="fas fa-compress-arrows-alt"></i></div>
                         <h3 class="tool-name">Image Compressor</h3>
                         <p class="tool-description">Reduce image file size without losing quality.</p>
-                        <a href="#" class="btn-tool">Use Tool</a>
+                        <a href="image-compressor.html" class="btn-tool">Use Tool</a>
                     </div>
                     
                     <div class="tool-card">
