--- a/index.html
+++ b/index.html
@@ -511,7 +511,7 @@
                         <div class="tool-icon-small"><i class="fas fa-expand-alt"></i></div>
                         <h3 class="tool-name">Image Resizer</h3>
                         <p class="tool-description">Resize images to your desired dimensions.</p>
-                        <a href="#" class="btn-tool">Use Tool</a>
+                        <a href="image-resizer.html" class="btn-tool">Use Tool</a>
                     </div>
                     
                     <div class="tool-card">
