--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
                         <div class="tool-icon-small"><i class="fas fa-crop-alt"></i></div>
                         <h3 class="tool-name">Image Cropper</h3>
                         <p class="tool-description">Crop images to remove unwanted areas.</p>
-                        <a href="#" class="btn-tool">Use Tool</a>
+                        <a href="image-cropper.html" class="btn-tool">Use Tool</a>
                     </div>
                     
                     <div class="tool-card">
