--- a/index.html
+++ b/index.html
@@ -525,7 +525,7 @@
                         <div class="tool-icon-small"><i class="fas fa-font"></i></div>
                         <h3 class="tool-name">Image to Text (OCR)</h3>
                         <p class="tool-description">Extract text from images using OCR technology.</p>
-                        <a href="#" class="btn-tool">Use Tool</a>
+                        <a href="image-text.html" class="btn-tool">Use Tool</a>
                     </div>
                     
                     <div class="tool-card">
