--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
                         <div class="tool-icon-small"><i class="fas fa-sync"></i></div>
                         <h3 class="tool-name">Image Rotator/Flipper</h3>
                         <p class="tool-description">Rotate or flip images in any direction.</p>
-                        <a href="#" class="btn-tool">Use Tool</a>
+                        <a href="image-rotater/flipper.html" class="btn-tool">Use Tool</a>
                     </div>
                 </div>
             </div>
