--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
                         <div class="tool-icon-small"><i class="fas fa-file-pdf"></i></div>
                         <h3 class="tool-name">PDF to Word / Word to PDF</h3>
                         <p class="tool-description">Convert between PDF and Word documents.</p>
-                        <a href="#" class="btn-tool">Use Tool</a>
+                        <a href="PDF-Word.html" class="btn-tool">Use Tool</a>
                     </div>
                     
                     <div class="tool-card">
