--- a/index.html
+++ b/index.html
@@ -792,7 +792,7 @@
                         <div class="tool-icon-small"><i class="fas fa-low-vision"></i></div>
                         <h3 class="tool-name">Color Blindness Simulator</h3>
                         <p class="tool-description">Simulate how colors appear to people with color blindness.</p>
-                        <a href="8" class="btn-tool">Use Tool</a>
+                        <a href="Color-Blindness.html" class="btn-tool">Use Tool</a>
                     </div>
                 </div>
             </div>
